unreleased:
  - major architecture rework:
    - added tracking connection structure
    - all receive sockets are select()ed
    - only one process is needed
    - udp is implemented
  - improved tests.
2010-07-02, netsed 0.02c:
  - added a test suite in test directory
  - catching ctrl-C and closing sockets:
    - to do that I also used a select for the listening socket, getting rid of
      the usleep call ;)
    - this also improve batch tests as it wont wait for some timeout to reuse
      the socket.

2010-06-19, netsed 0.02b:
  - imported patches from '#397420' :
    - IPv6 compatible reimplentation of resolving code
    - some minor other changes

2010-06-19, netsed 0.02a:
  - detecting client/server disconnection (not only on write fail)
  - using select in treatment process to avoid useless cpu load 'Debian Bug #586037'
  - resolving rhost address if needed 'Debian Bug #397420'
  - rule replacement was replacing all occurence of any rule,
    but will leave 1 char between any rule match,
    fixed to replace all occurence of the rules directly.

someday, netsed 0.01c:
  - last available netsed version taken from debian archive.
